# dev-tools

./: .gitignore  LICENSE  README.md
futility/: FUTILITY.md  README.md  core.sh  package.sh  promptimal.sh  speccial.sh
futility/futility-py/: README.md  pyproject.toml  sqord.py
futility/lib/: bash_is_a_real_language.sh  cbdbdd.sh  colors.sh  deepthonk.sh  emoji_sig.sh  f.sh  futility_theme.sh  git-custom.completions.sh  git-wip.completions.sh  git_cd.sh  jiph.sh  junk_drawer.sh  language_environments.sh  mercator.sh  mercator_scan.sh  new.completions.sh  promptimal.sh  readers.sh  schmuck.sh  speccial.sh  ticket.completions.sh  world_map.txt
futility/lib/data-files/: new_project.sh.template
futils/: core.sh  package.sh  speccial.sh
git/: .gitconfig  shared.gitconfig
needs_unification/: .gitconfig_local  .helper_functions.sh  git-wip
plugins/bat/: bat_options.sh
plugins/docker/: plugin.sh
plugins/fzf/: plugin.sh
plugins/gdrive-wedav/: gdrive-wedav
plugins/karabiner/: macos-esc.karabiner.json  macos-squirtle.karabiner.json
plugins/kitty/: kitty-conf.sublime-syntax  kitty.conf  plugin.sh
plugins/nox/: plugin.sh
plugins/rectangle/: com.knollsoft.Rectangle.plist.xml
plugins/sublime/: macos-esc.sublime-keymap
plugins/vim/: .vimrc
plugins/vs-code/: keybindings.json
profiles/: DevPurple.terminal  aliases.sh  bash_profile.sh  bashrc.sh  colors.sh  macos-esc.karabiner.json  macos-esc.sublime-keymap  macos-meeseeks.sublime-keymap  powershell.ps1  pryrc.rb  shared.gitconfig  shared.gitignore
scripts/: pypackage.sh  sleepy_cat.sh
(+19 files in other folders)
